--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Hangman",
   "version": "0.0.1",
-  "description": "This is a simple game made is javascript using Jade, Stylus and AngularJS.",
+  "description": "This is a simple game made with javascript using Jade, Stylus and AngularJS",
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.10",
