--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.10",
+    "gulp-connect": "^2.2.0",
+    "gulp-jade": "^0.10.0",
+    "gulp-jade-inheritance": "^0.5.0",
+    "gulp-stylus": "^1.3.4",
+    "gulp-uglify": "^1.0.2",
     "jade": "^1.8.2",
     "nodemon": "^1.2.1",
     "stylus": "^0.49.3"
