--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp-jade-inheritance": "^0.5.0",
     "gulp-stylus": "^1.3.4",
     "gulp-uglify": "^1.0.2",
+    "gulp-watch": "^3.0.0",
     "jade": "^1.8.2",
     "nodemon": "^1.2.1",
     "stylus": "^0.49.3"
