--- a/bower.json
+++ b/bower.json
@@ -7,5 +7,8 @@
     "jquery": "~2.1.3",
     "fontawesome": "~4.2.0",
     "angular": "~1.3.8"
+  },
+  "dependencies": {
+    "angular-ui-utils": "~0.1.1"
   }
 }
