--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,11 @@
 {
-  "name": "bower.json",
-  "version": "0.0.1",
-  "description": "This is the bower.json",
+  "name": "Hangman",
+  "version": "0.0.2",
+  "description": "This is the JS version of the Hangman game.",
+  "authors": [
+    "Josskar <josschavez@gmail.com>",
+    "Crackdile <alonso.mendez@gmail.com>"
+  ],
   "devDependencies": {
     "bootstrap": "~3.3.1",
     "jquery": "~2.1.3",
@@ -10,5 +14,9 @@
   },
   "dependencies": {
     "angular-ui-utils": "~0.1.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gamesRum/Hangman"
   }
 }
