--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "Hangman",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "This is a simple game made with javascript using Jade, Stylus and AngularJS",
+  "contributors": [
+    "Josskar <josschavez@gmail.com>",
+    "Crackdile <alonso.mendez@gmail.com>"
+  ],
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.10",
@@ -14,5 +18,9 @@
     "jade": "^1.8.2",
     "nodemon": "^1.2.1",
     "stylus": "^0.49.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gamesRum/Hangman"
   }
 }
