--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "bower": "^1.3.12",
     "gulp": "^3.8.10",
+    "gulp-clean": "^0.3.1",
     "gulp-connect": "^2.2.0",
     "gulp-jade": "^0.10.0",
     "gulp-jade-inheritance": "^0.5.0",
